# dummy_lib_with_cmake

./: CMakeLists.txt  LICENSE  README.md  build.bash  run.bash
c_app/: dummy_app.c
cpp_app/: dummy_app.cpp
libs/include/: dummy.hpp  wrapper.h
libs/src/: dummy.cpp
